<resources>
    <string name="app_name">Modulo</string>
    <string name="textJudul">Selamat Datang di The Modulo untuk Menghitung Modulus</string>
    <string name="judulKalkulator">Modulus Calculator</string>
    <string name="angka1">Masukkan Angka</string>
    <string name="angka2">Masukkan Modulus</string>
    <string name="hitung">Hitung</string>
    <string name="hasil">Hasil = %1$.2f</string>
    <string name="bagikan">Hasil = %1$.2f</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="angka1_invalid">Angka tidak boleh kosong</string>
    <string name="angka2_invalid">Angka tidak boleh kosong</string>
    <string name="histori">Histori</string>
    <string name="hapus_histori">Hapus Histori</string>
    <string name="belum_ada_data">Belum ada data</string>
    <string name="hapus">Hapus</string>
    <string name="AboutFragment">About</string>
    <string name="konfirmasi_hapus">Hapus semua histori</string>
    <string name="batal">Batal</string>
    <string name="copyright">Modulus merupakan sebuah aplikasi Android untuk menghitung modulus sehingga kita mengetahui hasil modulus dari 2 bilangan.</string>
    <string name="bagikan_template">Berikut hasil modulus \n Angka: %1$s\n Modulus: %2$s \n Hasil = %3$s</string>
    <string name="koneksi_error">Koneksi error</string>
    <string name="message">%1$s diklik!</string>
    <string name="informasi">Informasi</string>
    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update data informasi</string>
    <string name="notif_title">Cari Tahu Tentang Modulus!</string>
    <string name="notif_text">Pelajari sekarang tentang Modulus di Modulo!</string>

</resources>